public enum EstadoEquipo {
    ACTIVO,
    MANTENIMIENTO,
    INACTIVO
}
