public enum EstadoIncidencia {
    PENDIENTE,
    EN_PROCESO,
    TERMINADO
}
