public enum Prioridad {
    URGENTE,
    ALTA,
    MEDIA,
    BAJA
}
