public enum RolAcademico {
    Profesor,
    Directivo
}
