public enum TipoFalla {
    HARDWARE,
    SOFTWARE,
    RED
}
